--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h4>Achievement</h4>
                 <ul>
                     <li>Supportive team for Ranga enterprises</li>
-                    <li>completed SSLS</li>
+                    <li>completed SSLC</li>
                     <li>Joined Mevi Technology </li>
                 </ul>
             </div>
