--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="container">
-            <h1 class="h1">CHETHAN K</h1>
+            <h1 class="h1">MY PORTFOLIO</h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
